--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 
     <div id="error_message"></div>
 
-    <script src="web_stuff/network_document.js"></script>
+    <script src="web_stuff/document.js"></script>
+    <script src="web_stuff/network.js"></script>
     <script src="web_stuff/debug_stuff.js"></script>
 </body>
 
