bug fix && cleaning

--- a/index.html
+++ b/index.html
@@ -23,40 +23,45 @@
 
 <body>
     <h1>Chi Chat</h1>
-    <div id="server_wrapper">
-        <label class="label" id="server_label">主服务器地址:</label>
-        <div id="server_setting">
-            <input type="text" id="server_address" />
-            <button id="update_server_address">确定</button>
+    <div id="input_wrapper">
+        <div id="server_wrapper">
+            <label class="label" id="server_label">主服务器地址:</label>
+            <div id="server_setting">
+                <input type="text" id="server_address" />
+                <button id="update_server_address">确定</button>
+            </div>
         </div>
     </div>
-    <div id="message_area"></div>
-    <div id="up_list">
-        <p>在线用户</p>
+
+    <label class="label" id="username_label">用户名：</label>
+    <div id="username_wrapper">
+        <input type="text" id="username" />
+        <button id="username_submit">确定</button>
     </div>
-    <br />
-    <div id="menu_bar">
-        <label class="label" id="username_label">用户名：</label>
-        <div id="username_wrapper">
-            <input type="text" id="username" />
-            <button id="username_submit">确定</button>
+
+    <div id="main_wrapper">
+        <div id="message_area"></div>
+        <div id="up_list">
+            <p>在线用户</p>
         </div>
-        <button class="" id="image_select" onclick=""><img class="svg_label" src="asset/image.svg" /></button>
-        <button class="" id="file_select" onclick=""><img class="svg_label" src="asset/file_upload.svg" /></button>
-    </div>
-    <br />
-    <div id="send_area">
-        <form action="javascript:void(0);" id="message_send">
-            <label class="label">信息：</label>
-            <textarea id="input_area"></textarea>
-            <input type="submit" id="send" value="发送" />
-        </form>
+        <br />
+        <div id="menu_bar">
+            <button class="" id="image_select" onclick=""><img class="svg_label" src="asset/image.svg" /></button>
+            <button class="" id="file_select" onclick=""><img class="svg_label" src="asset/file_upload.svg" /></button>
+        </div>
+        <br />
+        <div id="send_area">
+            <form action="javascript:void(0);" id="message_send">
+                <label class="label">信息：</label>
+                <textarea id="input_area"></textarea>
+                <input type="submit" id="send" value="发送" />
+            </form>
+        </div>
     </div>
 
     <div id="error_message"></div>
 
-    <script src="compiled/document.js"></script>
-    <script src="compiled/network.js"></script>
+    <script src="compiled/document_network.js"></script>
     <script src="compiled/debug_stuff.js"></script>
 </body>
 
